Update and rename Untitled-1.md to 第一周学习.md

--- a/第一周学习.md
+++ b/第一周学习.md
@@ -89,7 +89,7 @@ man(选项)(参数)
 -f：等价于whatis指令，显示给定关键字的简短描述信息；   
 -P：指定内容时使用分页程序；   
 -M：指定man手册搜索的路径。 
-#### linux history命令
+#### linux中history命令
 history命令用于显示指定数目的指令命令，读取历史命令文件中的目录到历史命令缓冲区和将历史命令缓冲区中的目录写入命令文件。   
 该命令单独使用时，仅显示历史命令，在命令行中，可以使用符号!执行指定序号的历史命令。例如，要执行第2个历史命令，则输入!2。     
 历史命令是被保存在内存中的，当退出或者登录shell时，会自动保存或读取。在内存中，历史命令仅能够存储1000条历史命令，该数量是由环境变量HISTSIZE进行控制。         
